# schip8

./: Cargo.toml  README.md
src/: config.rs  errors.rs  lib.rs  memory.rs  screen.rs
src/cpu/: mod.rs  opcodes.rs
src/memory/: mod.rs
